Fixed some bugs with the down triangle not showing when switching between short-term and long-term.

--- a/public/css/home.css
+++ b/public/css/home.css
@@ -93,7 +93,7 @@ font-family: "Source Sans Pro", sans-serif;
     width: 100%;
     height: 200px;
     overflow-y: hidden;
-    max-height: 200px;
+    max-height: 0px;
 
     transition-property: all;
     transition-duration: .5s;
@@ -101,7 +101,7 @@ font-family: "Source Sans Pro", sans-serif;
 }
 
 #slideout.on {
-    max-height: 0;
+    max-height: 200px;
 }
 
 .button_slide {
